# tauri-downloader

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
docs/: parallel-rewrite-guide.html
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  download_core.rs  error.rs  lib.rs  main.rs  monitor.rs  settings.rs  state.rs
src-tauri/src/commands/: common.rs  mod.rs  network.rs
src-tauri/src/http_dl/: commands.rs  events.rs  manager.rs  mod.rs
src-tauri/src/jin/: commands.rs  core.rs  mod.rs
src-tauri/src/providers/: mod.rs  nhentai.rs  wnacg.rs
src-tauri/src/torrent/: commands.rs  events.rs  mod.rs  settings.rs  state.rs
src-tauri/src/utils/: fs.rs
src/components/: DownloadPage.tsx  TaskInputForm.tsx  TaskList.tsx  TaskListView.tsx  Toolbar.tsx
src/components/bt/: AddMagnetDialog.tsx  BtSettingsDialog.tsx  BtView.tsx  PendingRow.tsx  TorrentRow.tsx
src/components/http/: AddHttpDialog.tsx  HttpRow.tsx  HttpView.tsx
src/components/jin/: JinRootsDialog.tsx  JinView.tsx
src/hooks/: useClipboardMonitor.ts  useColumnResize.ts  useDownloadTasks.ts  useHttpStats.ts  useTaskManager.ts  useTorrentStats.ts  useUrlDrop.ts
src/lib/: btApi.ts  format.ts  httpApi.ts  jinApi.ts  settingsApi.ts
